<resources>
    <!--Labels-->
    <string name="app_name">LinkHub</string>
    <string name="top_folders">Top Folders</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="links">Links</string>
    <string name="search">Search</string>
    <string name="link_icon">Link Icon</string>
    <string name="all_folders">All Folders</string>
    <string name="link_title">Link Title</string>
    <string name="link_subtitle">Link SubTitle</string>
    <string name="link_url">Link url</string>
    <string name="pinned">Pinned</string>
    <string name="folder_name">Folder name</string>
    <string name="none">None</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Last updated at</string>
    <string name="settings">Settings</string>
    <string name="issues">Issues</string>
    <string name="contributors">Contributors</string>
    <string name="source_code">Source code</string>
    <string name="sponsor">Sponsor</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="show_counter">Show counter</string>
    <string name="auto_saving">Auto saving</string>
    <string name="folder_color_preview">Folder Color Preview</string>
    <string name="next_folder_color">Next Folder Color</string>
    <string name="previous_folder_color">Previous Folder Color</string>
    <string name="import_export">Import and Export</string>
    <string name="import_export_choose_file_type">Choose a file type</string>
    <string name="password">Password</string>
    <string name="enable_password">Enable password</string>
    <string name="default_folder">Remember the last folder</string>

    <!--Actions-->
    <string name="add_link">Add Link</string>
    <string name="add_new_link">Add new Link</string>
    <string name="show_add_options">Show add Options</string>
    <string name="add_link_option">Add Link Option</string>
    <string name="add_folder_option">Add Folder Option</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="copy">Copy</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="imports">Import</string>
    <string name="export">Export</string>
    <string name="check">Check</string>

    <!--Messages-->
    <string name="message_link_copy">Link url is copied Now</string>
    <string name="message_link_invalid">Can\'t open link url in the browser</string>
    <string name="message_link_deleted">Your link is deleted</string>
    <string name="message_links_empty">You have 0 Links</string>

    <string name="message_folders_empty">You have 0 Folders</string>

    <string name="message_data_imported">Data is imported Successfully</string>
    <string name="message_data_exported">Data is exported in Download directory Successfully</string>

    <string name="message_invalid_extension">Invalid File extensions</string>
    <string name="message_invalid_data_format">Invalid data format</string>
    <string name="message_invalid_export">Invalid export this data</string>

    <string name="message_password_enabled">Password is enabled</string>
    <string name="message_password_disabled">Password is disabled</string>

    <!--Counters-->
    <string name="folder_count">Folders: %1$d</string>
    <string name="version">Version %1$s</string>

    <!--Error Messages-->
    <!--Link Error Messages-->
    <string name="error_get_links">Can\'t find links</string>
    <string name="error_insert_link">Can\'t add this link</string>
    <string name="error_update_link">Can\'t update this link</string>
    <string name="error_delete_link">Can\'t delete this link</string>
    <string name="error_link_title_empty">Link title can\'t be empty</string>
    <string name="error_link_subtitle_empty">Link subtitle can\'t be empty</string>
    <string name="error_link_url_empty">Link url can\'t be empty</string>
    <string name="error_link_url_invalid">Link url is invalid</string>
    <string name="error_link_same_title">You have an existing link with same title</string>

    <!--Folder Error Messages-->
    <string name="error_get_top_folders">Can\'t find top folders</string>
    <string name="error_get_folders">Can\'t find folders</string>
    <string name="error_insert_folder">Can\'t add this folder</string>
    <string name="error_update_folder">Can\'t update this folder</string>
    <string name="error_delete_folder">Can\'t delete this folder</string>
    <string name="error_folder_name_empty">Folder name can\'t be empty</string>
    <string name="error_folder_name_small">Folder name can\'t be less than 3 characters</string>
    <string name="error_folder_same_name">You have an existing folder with same name</string>

    <!-- Password error message -->
    <string name="error_password_empty">Password can\'t be empty</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_password_back_from_check">Can\'t ignore password check</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="error_password_too_short">Must be at least 5 characters</string>

    <!-- Folder protection -->
    <string name="password_protected">Password Protected</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--Shortcuts-->
    <string name="folder_create">Create Folder</string>
    <string name="link_create">Create Link</string>
</resources>