...
                        passwordErrorMessage = ""
                    },
                    label = { Text(text = stringResource(R.string.password)) },
                    visualTransformation = PasswordVisualTransformation(),
                    singleLine = true,
                    modifier = Modifier
                        .semantics { contentDescription = "Password Text" }
                        .fillMaxWidth()
                        .padding(8.dp),
                )

                OutlinedTextField(
                    value = confirmPassword,
...
                        passwordErrorMessage = ""
                    },
                    label = { Text(text = stringResource(R.string.confirm_password)) },
                    visualTransformation = PasswordVisualTransformation(),
                    singleLine = true,
                    modifier = Modifier
                        .semantics { contentDescription = "Confirm Password Text" }
                        .fillMaxWidth()
                        .padding(8.dp),
                    isError = passwordErrorMessage.isNotEmpty(),
                    supportingText = {
                        if (passwordErrorMessage.isNotEmpty()) {
                            Text(text = passwordErrorMessage)
...
